--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,39 @@ body {
 
 header {
   background-color: #0c325a;
-  /* Aggiungere bg */
-
-  height: 550px;
+  color: white;
+  background-image: url('../img/background-header.png');
+  background-size: 65%;
+  background-repeat: no-repeat;
+  background-position: 110% 105%;
 }
 
 ul {
   list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.btn {
+  border-radius: 5px;
+}
+
+.btn-nocolor {
+  border: 1px solid white;
+  padding: 8px 35px;
+}
+
+.btn-green {
+  background-color: #7cbb02;
+  padding: 8px 15px;
+}
+
+.btn-big {
+  padding: 25px 20px;
 }
 
 .float-left {
@@ -32,18 +58,14 @@ ul {
 .container {
   width: 80%;
   margin: auto;
-
-  height: 100%;
-  background-color: black;
 }
 
 /* header */
 .header-nav {
-  height: 80px;
+  height: 90px;
   width: 100%;
-  line-height: 80px;
-
-  background-color: green;
+  line-height: 90px;
+  padding: 5px 0;
 }
 
 .header-nav ul li {
@@ -54,32 +76,35 @@ ul {
 .header-nav-logo {
   width: 15%;
   height: 100%;
-
-  background-color: blue;
 }
 
 .header-nav-logo img {
-  margin-top: 13px;
+  margin-top: 17px;
 }
 
 .header-nav-menu-center {
   width: 40%;
-  height: 100%;
-
-  background-color: gray;
 }
 
 .header-nav-menu-right {
   width: 45%;
-  height: 100%;
   text-align: right;
-
-  background-color: orange;
 }
 
 .jumbotron {
-  height: 470px;
-  width: 100%;
+  height: 590px;
+  position: relative;
+}
 
-  background-color: pink;
+.jumbotron .title {
+  width: 40%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.jumbotron .title h1 {
+  font-size: 60px;
+  margin-bottom: 60px;
 }
