--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,24 @@ a {
   font-size: 60px;
   margin-bottom: 60px;
 }
+
+/* main */
+section.box-slogan {
+  background-color: #d3d3d3;
+  height: 150px;
+  position: relative;
+}
+
+section.box-slogan .slogan {
+  font-size: 20px;
+  text-align: center;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+section.box-slogan .slogan p {
+  padding-top: 10px;
+  color: #808080;
+}
