--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ section.level .level-box {
 }
 
 section.level .level-box .image-mountain {
-  height: 400px;
+  height: 450px;
   margin-top: 50px;
   background-image: url('../img/mountain.svg');
   background-repeat: no-repeat;
@@ -228,4 +228,24 @@ section.level .level-box .level-title {
 
 section.level .level-box .level-title a {
   color: #5586bc;
+}
+
+/* sezione 4 */
+section.view-plan {
+  background-color: #d3d3d3;
+}
+
+.view-plan-title {
+  width: 30%;
+  height: 150px;
+  line-height: 150px;
+}
+
+.view-plan-title h2 {
+  font-size: 40px;
+}
+
+.view-plan-select {
+  width: 70%;
+  height: 150px;
 }
